--- a/Tuan3/bai1d/package.json
+++ b/Tuan3/bai1d/package.json
@@ -7,15 +7,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
     "expo": "~46.0.9",
-    "expo-constants": "~13.2.4",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "4.9.2",
-    "expo-linear-gradient": "~11.4.0"
+    "@expo/vector-icons": "^13.0.0",
+    "expo-constants": "~13.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
