--- a/Tuan8/demoanimated/package.json
+++ b/Tuan8/demoanimated/package.json
@@ -8,15 +8,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "expo": "^46.0.16",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "expo": "~46.0.16",
     "expo-constants": "~13.2.4",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
+    "react-is": "^18.2.0",
     "react-native": "0.69.6",
-    "react-native-paper": "4.9.2"
+    "react-native-paper": "4.9.2",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "^18.0.24",
+    "@types/react-native": "^0.70.6"
   },
   "private": true
 }
